--- a/pages/hardware.html
+++ b/pages/hardware.html
@@ -76,7 +76,7 @@ permalink: /hardware.html
       <br>
       <sub>Washington Hardware Company Remodel
       <br>
-      TPL Historic Building Files (BU-10989)
+      TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/16849/rec/1">(BU-10989)</a>
       <br>
       Courtesy Northwest Room</sub>
     </div>
