--- a/pages/mock.html
+++ b/pages/mock.html
@@ -123,7 +123,7 @@ permalink: /mock.html
     <div class="column right" style="background-color:#FFFFFF;">
       <a href="https://aweymo.github.io/losttacoma/browse.html#901 S 4TH ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_talmud_02" alt="Talmud Torah Synagogue" style="max-width:100%;"></a>
       <br>
-      <sub>Talmud Torah Synagogue
+      <sub>Talmud Torah Synagogue Interior
       <br>
       Marvin D. Boland Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/29138/rec/1">(BOLAND-B18322)</a>, 04-08-1928
       <br>  
