--- a/pages/sutton.html
+++ b/pages/sutton.html
@@ -67,7 +67,10 @@ permalink: /sutton.html
     <br>
     <a href="https://aweymo.github.io/losttacoma/waist.html">New York Waist House</a>
     <br>
-    <a href="https://aweymo.github.io/losttacoma/sabh.html">Scandinavian American Bank Hotel</a></p>
+    <a href="https://aweymo.github.io/losttacoma/sabh.html">Scandinavian American Bank Hotel</a>
+    <br>
+    <a href="https://aweymo.github.io/losttacoma/hardware.html">Washington Hardware Company Remodel</a>
+    </p>
     <br>
     <p>Albert Sutton was born in Victoria, British Columbia, raised in Portland, Oregon and graduated from the University of California in Berkeley. 
       His first architectural partnership was with James Pickles in 1888, followed by a brief collaboration with <a href="https://aweymo.github.io/losttacoma/russell.html">Ambrose J. Russell</a> which lasted only two years when Sutton relocated to San Francisco. 
