--- a/pages/whitney.html
+++ b/pages/whitney.html
@@ -65,7 +65,10 @@ permalink: /whitney.html
     <br>
     <a href="https://aweymo.github.io/losttacoma/waist.html">New York Waist House</a>
     <br>
-    <a href="https://aweymo.github.io/losttacoma/sabh.html">Scandinavian American Bank Hotel</a></p>
+    <a href="https://aweymo.github.io/losttacoma/sabh.html">Scandinavian American Bank Hotel</a>
+    <br>
+    <a href="https://aweymo.github.io/losttacoma/hardware.html">Washington Hardware Company Remodel</a>
+    </p>
     <br>
     <p>Harrison Allen Whitney was born in Osage, Iowa and graduated from the Massachusetts Institute of Technology in architecture. 
       After working in Boston and Chicago, Whitney moved to Portland, Oregon as head draftsman for Whidden & Lewis. 
