--- a/pages/fireboat.html
+++ b/pages/fireboat.html
@@ -75,7 +75,7 @@ permalink: /fireboat.html
       <br>
       <sub>Fireboat for the City of Tacoma
       <br>   
-      TPL Historic Building Files (BU-14839), c.a. 1981
+      TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/823/rec/1">(BU-14839)</a>, c.a. 1981
       <br>  
       Courtesy Northwest Room</sub>
     </div>
