--- a/pages/bachelor.html
+++ b/pages/bachelor.html
@@ -68,7 +68,7 @@ permalink: /bachelor.html
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/mission.html"><img src="https://aweymo.github.io/losttacoma/objects/p_bachelor.jpeg" alt="Arthur J. Bachelor" style="max-width:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt055"><img src="https://aweymo.github.io/losttacoma/objects/p_bachelor.jpeg" alt="Arthur J. Bachelor" style="max-width:100%;"></a>
   <br>
   <br>
   </div>
