--- a/pages/abattoir.html
+++ b/pages/abattoir.html
@@ -54,7 +54,7 @@ permalink: /abattoir.html
 
   <div class="row">
     <div class="column left" style="background-color:#FFFFFF;">
-      <h4><p><b>Carsten Packing Company Abattoir</b></p></h4>
+      <h4><p><b>Carstens Packing Company Abattoir</b></p></h4>
       <br>
       <strong>Status: Demolished</strong>
       <br>
@@ -62,16 +62,21 @@ permalink: /abattoir.html
       <br>
      Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1623%20E%20J%20ST%2C%20TACOMA">1623 E J ST, TACOMA</a></p>
       <br>
-      <p>Series of 21 technical drawings for the Carsten Packing Company created by the <a href="https://aweymo.github.io/losttacoma/hec.html">Henschien, Everds & Crombie Architects & Engineers</a> firm on June 10, 1939. The company was based in Chicago, Illinois at 59 East Van Buren St. and they specialized in meat processing plants. </p>
+      <p>Series of 21 technical drawings for the Carstens Packing Company created by the <a href="https://aweymo.github.io/losttacoma/hec.html">Henschien, Everds & Crombie Architects & Engineers</a> firm on June 10, 1939. 
+      The company was based in Chicago, Illinois at 59 East Van Buren St. and specialized in meat processing plants. </p>
       <br>
-      <p>The company also designed plans for the Frye & Co. plant in Seattle and Oscar Mayer in Iowa City. The Carsten Packing Company had been active since 1897. In 1954, the company was sold to an Eastern firm and renamed to the Hi-Grade Packing Co. In 1990, executives in Seattle closed the Tacoma processing plant and on October 24, 1996 the structure was destroyed by fire.</p>
+      <p>The Carstens Packing Company had been active since 1897. In 1954, the company was sold to an Eastern firm and renamed to the Hi-Grade Packing Co. 
+      In 1990, executives in Seattle closed the Tacoma processing plant and on October 24, 1996 the structure was destroyed by fire. The location is now the site of the Tacoma Immigration and Customs Enforcement detention center.</p>
+      <br>
       </div>
     <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1623%20E%20J%20ST%2C%20TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_carstens" alt="Carstens Packing Company" style="max-width:100%"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1623%20E%20J%20ST%2C%20TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/b_carstens_3.jpeg" alt="View of the west side of the plant and nearby stockyards." style="max-width:100%"></a>
     <br>
-    <sub>Carsten Packing Company, TPL Cultural Resource Survey (BU-10009), 1977</sub>
+    <sub>Carstens Packing Company "Showing Port of Large Stockyards"
     <br> 
-    <sub>Courtesy Tacoma Public Library Northwest Room</sub>
+    General Photograph Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/6623/rec/24">CARSTENS-003</a>, c.a. 1909
+    <br> 
+    Courtesy Tacoma Public Library Northwest Room</sub>
     <br>
     </div>
     <div class="column left" style="background-color:#FFFFFF;">
@@ -126,6 +131,26 @@ permalink: /abattoir.html
       <sub>Courtesy Tacoma Public Library Northwest Room</sub>
       <br>
     </div>
+  <div class="column left" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1623%20E%20J%20ST%2C%20TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/b_carstens_3.jpeg" alt="Portion of the large meat packing concern's stockyards was one of several compiled for a Carstens Packing Co. booklet dated Christmas, 1909. " style="max-width:100%"></a>
+    <br>
+    <sub>Carstens Packing Company "Showing Port of Large Stockyards"
+    <br> 
+    General Photograph Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/6249/rec/26">CARSTENS-002</a>, c.a. 1909
+    <br> 
+    Courtesy Tacoma Public Library Northwest Room</sub>
+    <br>
+    </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1623%20E%20J%20ST%2C%20TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/b_carstens_3.jpeg" alt="Portion of the large meat packing concern's stockyards was one of several compiled for a Carstens Packing Co. booklet dated Christmas, 1909. " style="max-width:100%"></a>
+    <br>
+    <sub>"Inedible Tank Rendering Room" at Carstens Packing Company
+    <br> 
+    General Photograph Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/14721/rec/30">CARSTENS-019</a>, c.a. 1909
+    <br> 
+    Courtesy Tacoma Public Library Northwest Room</sub>
+    <br>
+  </div>
   </div>
   
 </body>
