--- a/pages/abattoir.html
+++ b/pages/abattoir.html
@@ -72,7 +72,7 @@ permalink: /abattoir.html
     <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#1623%20E%20J%20ST%2C%20TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/b_carstens_3.jpeg" alt="View of the west side of the plant and nearby stockyards." style="max-width:100%"></a>
     <br>
-    <sub>Carstens Packing Company "Showing Port of Large Stockyards"
+    <sub>Carstens Packing Company "West Side of Plant"
     <br> 
     General Photograph Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/6623/rec/24">CARSTENS-003</a>, c.a. 1909
     <br> 
