--- a/pages/coolers.html
+++ b/pages/coolers.html
@@ -70,14 +70,34 @@ permalink: /coolers.html
       <br> 
       </div>
     <div class="column right" style="background-color:#FFFFFF;">
-      <a href="https://aweymo.github.io/losttacoma/browse.html#Henschien%20Everds%20%26%20Crombie"><img src="https://aweymo.github.io/losttacoma/objects/ ext_carstens" alt="Carstens Packing Company" style="max-width:100%"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1623%20E%20J%20ST%2C%20TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/b_carstens_3.jpeg" alt="View of the west side of the plant and nearby stockyards." style="max-width:100%"></a>
     <br>
-    <sub>Carsten Packing Company
-    <br>   
-    TPL Cultural Resource Survey (BU-10009), 1977</sub>
+    <sub>Carstens Packing Company "West Side of Plant"
     <br> 
-    <sub>Courtesy Tacoma Public Library Northwest Room</sub>
+    General Photograph Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/6623/rec/24">CARSTENS-003</a>, c.a. 1909
+    <br> 
+    Courtesy Tacoma Public Library Northwest Room</sub>
     <br>
+    </div>
+    <div class="column left" style="background-color:#FFFFFF;">
+      <a href="https://aweymo.github.io/losttacoma/browse.html#1623%20E%20J%20ST%2C%20TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/b_carstens_3.jpeg" alt="Portion of the large meat packing concern's stockyards was one of several compiled for a Carstens Packing Co. booklet dated Christmas, 1909. " style="max-width:100%"></a>
+      <br>
+      <sub>Carstens Packing Company "Showing Port of Large Stockyards"
+      <br> 
+      General Photograph Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/6249/rec/26">CARSTENS-002</a>, c.a. 1909
+      <br> 
+      Courtesy Tacoma Public Library Northwest Room</sub>
+      <br>
+      </div>
+    <div class="column right" style="background-color:#FFFFFF;">
+      <a href="https://aweymo.github.io/losttacoma/browse.html#1623%20E%20J%20ST%2C%20TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/b_carstens_3.jpeg" alt="Portion of the large meat packing concern's stockyards was one of several compiled for a Carstens Packing Co. booklet dated Christmas, 1909. " style="max-width:100%"></a>
+      <br>
+      <sub>"Inedible Tank Rendering Room" at Carstens Packing Company
+      <br> 
+      General Photograph Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/14721/rec/30">CARSTENS-019</a>, c.a. 1909
+      <br> 
+      Courtesy Tacoma Public Library Northwest Room</sub>
+      <br>
     </div>
   </div>
 </div>
