--- a/pages/abattoir.html
+++ b/pages/abattoir.html
@@ -66,7 +66,9 @@ permalink: /abattoir.html
       The company was based in Chicago, Illinois at 59 East Van Buren St. and specialized in meat processing plants. </p>
       <br>
       <p>The Carstens Packing Company had been active since 1897. In 1954, the company was sold to an Eastern firm and renamed to the Hi-Grade Packing Co. 
-      In 1990, executives in Seattle closed the Tacoma processing plant and on October 24, 1996 the structure was destroyed by fire. The location is now the site of the Tacoma Immigration and Customs Enforcement detention center.</p>
+      In 1990, executives in Seattle closed the Tacoma processing plant and on October 24, 1996 the structure was destroyed by fire. 
+      <br>
+      The location is now the site of the Tacoma Immigration and Customs Enforcement detention center.</p>
       <br>
       </div>
     <div class="column right" style="background-color:#FFFFFF;">
