--- a/pages/pork.html
+++ b/pages/pork.html
@@ -74,7 +74,7 @@ permalink: /pork.html
         <br>
         <sub>Carstens Packing Company "West Side of Plant"
         <br> 
-        General Photograph Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/6623/rec/24">CARSTENS-003</a>, c.a. 1909
+        General Photograph Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/6623/rec/24">(CARSTENS-003)</a>, c.a. 1909
         <br> 
         Courtesy Tacoma Public Library Northwest Room</sub>
         <br>
@@ -84,7 +84,7 @@ permalink: /pork.html
           <br>
           <sub>Carstens Packing Company "Showing Port of Large Stockyards"
           <br> 
-          General Photograph Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/6249/rec/26">CARSTENS-002</a>, c.a. 1909
+          General Photograph Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/6249/rec/26">(CARSTENS-002)</a>, c.a. 1909
           <br> 
           Courtesy Tacoma Public Library Northwest Room</sub>
           <br>
@@ -94,7 +94,7 @@ permalink: /pork.html
           <br>
           <sub>"Inedible Tank Rendering Room" at Carstens Packing Company
           <br> 
-          General Photograph Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/14721/rec/30">CARSTENS-019</a>, c.a. 1909
+          General Photograph Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/14721/rec/30">(CARSTENS-019)</a>, c.a. 1909
           <br> 
           Courtesy Tacoma Public Library Northwest Room</sub>
           <br>
