--- a/pages/abattoir.html
+++ b/pages/abattoir.html
@@ -1,5 +1,5 @@
 ---
-title: Carsten Packing Company Abattoir
+title: Carstens Packing Company Abattoir
 layout: about
 permalink: /abattoir.html
 ---
@@ -69,6 +69,12 @@ permalink: /abattoir.html
       In 1990, executives in Seattle closed the Tacoma processing plant and on October 24, 1996 the structure was destroyed by fire. 
       <br>
       The location is now the site of the Tacoma Immigration and Customs Enforcement detention center.</p>
+      <br>
+      Other records related to this location:
+      <br>
+      <a href="https://aweymo.github.io/losttacoma/coolers.html">Carsten Packing Company Coolers and Shipping Office</a>
+      <br>
+      <a href="https://aweymo.github.io/losttacoma/pork.html">Carsten Packing Company Pork House</a>
       <br>
       </div>
     <div class="column right" style="background-color:#FFFFFF;">
