--- a/pages/cornils.html
+++ b/pages/cornils.html
@@ -61,11 +61,11 @@ permalink: /cornils.html
     <br>
     <p><strong>Lost Tacoma Locations:</strong>
     <br>  
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt028">Carsten Packing Company Pork House</a>
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt028">Carstens Packing Company Pork House</a>
     <br>
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt027">Carsten Packing Company Coolers and Shipping Office</a> </p>
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt027">Carstens Packing Company Coolers and Shipping Office</a> </p>
     <br>
-    <p>According to passages in Electrical West and American Machinist magazines, published in 1922, P.V. Cornils acted as the Carsten Packing Company in-house architect, designing various additions around the original structure. </p>
+    <p>According to passages in Electrical West and American Machinist magazines, published in 1922, P.V. Cornils acted as the Carstens Packing Company in-house architect, designing various additions around the original structure. </p>
     <br>
     <sub>Sources: "American Machinist. McGraw-Hill, 1922.", "Electrical West. McGraw-Hill Company of California, 1922.”</sub>
     <br>
