--- a/pages/hec.html
+++ b/pages/hec.html
@@ -56,7 +56,7 @@ permalink: /hec.html
   <div class="column left" style="background-color:#FFFFFF;">
     <h4><p><b>Henschien Everds & Crombie</b></p></h4>
     <br>
-    <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/abattoir.html">Carsten Packing Company Abattoir</a> </p>
+    <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/abattoir.html">Carstens Packing Company Abattoir</a> </p>
     <br>
     <p>Henschien Everds & Crombie were a Chicago firm that specialized in designing meat packing companies that complied with USDA standards. The company worked primarily with east coast companies, including Oscar Meyer. </p>
     <br>
