--- a/pages/coolers.html
+++ b/pages/coolers.html
@@ -1,5 +1,5 @@
 ---
-title: Carsten Packing Company Coolers and Shipping Office
+title: Carstens Packing Company Coolers and Shipping Office
 layout: about
 permalink: /coolers.html
 ---
@@ -54,7 +54,7 @@ permalink: /coolers.html
 
   <div class="row">
     <div class="column left" style="background-color:#FFFFFF;">
-      <h4><p><b>Carsten Packing Company Coolers and Shipping Office</b></p></h4>
+      <h4><p><b>Carstens Packing Company Coolers and Shipping Office</b></p></h4>
       <br>
       <strong>Status: Demolished</strong>
       <br>
@@ -62,7 +62,7 @@ permalink: /coolers.html
       <br>
       Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1623%20E%20J%20ST%2C%20TACOMA">1623 E J ST, TACOMA</a></p>
       <br>
-      <p>One of 16 available technical drawings created for the Carsten Packing Company, created by <a href="https://aweymo.github.io/losttacoma/cornils.html">P.V. Cornils</a>, the company's in-house architect, circa 1922.</p>
+      <p>One of 16 available technical drawings created for the Carstens Packing Company, created by <a href="https://aweymo.github.io/losttacoma/cornils.html">P.V. Cornils</a>, the company's in-house architect, circa 1922.</p>
       <br>
       <p>Technical Drawings: 
       <br>
