--- a/pages/pork.html
+++ b/pages/pork.html
@@ -1,5 +1,5 @@
 ---
-title: Carsten Packing Company Pork House
+title: Carstens Packing Company Pork House
 layout: about
 permalink: /pork.html
 ---
@@ -54,7 +54,7 @@ permalink: /pork.html
 
   <div class="row">
     <div class="column left" style="background-color:#FFFFFF;">
-      <h4><p><b>Carsten Packing Company Pork House</b></p></h4>
+      <h4><p><b>Carstens Packing Company Pork House</b></p></h4>
       <br>
       <strong>Status: Demolished</strong>
       <br>
@@ -62,7 +62,7 @@ permalink: /pork.html
       <br>
       Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1623%20E%20J%20ST%2C%20TACOMA">1623 E J ST, TACOMA</a></p>
       <br>
-      <p>One of 18 available technical drawings for the Carsten Packing Company, created by <a href="https://aweymo.github.io/losttacoma/cornils.html">P.V. Cornils</a>, in-house architect for the company, circa 1922.</p>
+      <p>One of 18 available technical drawings for the Carstens Packing Company, created by <a href="https://aweymo.github.io/losttacoma/cornils.html">P.V. Cornils</a>, in-house architect for the company, circa 1922.</p>
       <br>
       <p>Technical Drawings: 
       <br>
