--- a/pages/abattoir.html
+++ b/pages/abattoir.html
@@ -70,11 +70,11 @@ permalink: /abattoir.html
       <br>
       The location is now the site of the Tacoma Immigration and Customs Enforcement detention center.</p>
       <br>
-      Other records related to this location:
+      <p>Other records related to this location:
       <br>
       <a href="https://aweymo.github.io/losttacoma/coolers.html">Carsten Packing Company Coolers and Shipping Office</a>
       <br>
-      <a href="https://aweymo.github.io/losttacoma/pork.html">Carsten Packing Company Pork House</a>
+      <a href="https://aweymo.github.io/losttacoma/pork.html">Carsten Packing Company Pork House</a></p>
       <br>
       </div>
     <div class="column right" style="background-color:#FFFFFF;">
