--- a/pages/abattoir.html
+++ b/pages/abattoir.html
@@ -72,9 +72,9 @@ permalink: /abattoir.html
       <br>
       <p>Other records related to this location:
       <br>
-      <a href="https://aweymo.github.io/losttacoma/coolers.html">Carsten Packing Company Coolers and Shipping Office</a>
+      <a href="https://aweymo.github.io/losttacoma/coolers.html">Carstens Packing Company Coolers and Shipping Office</a>
       <br>
-      <a href="https://aweymo.github.io/losttacoma/pork.html">Carsten Packing Company Pork House</a></p>
+      <a href="https://aweymo.github.io/losttacoma/pork.html">Carstens Packing Company Pork House</a></p>
       <br>
       </div>
     <div class="column right" style="background-color:#FFFFFF;">
