Courtesy Tacoma Public Library Northwest Room

--- a/pages/albertson.html
+++ b/pages/albertson.html
@@ -94,7 +94,7 @@ permalink: /albertson.html
     <br>
     <sub>Crystal Palace Public Market, TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/18425/rec/1">(BU-10009)</a>
     <br>  
-    Courtesy Northwest Room</sub>
+    Courtesy Tacoma Public Library Northwest Room</sub>
   </div>
 </div>
   
