--- a/pages/arlington.html
+++ b/pages/arlington.html
@@ -78,7 +78,7 @@ permalink: /arlington.html
       <br> 
       TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/7337/rec/1">(BU-11303)</a>, 12-11-1926
       <br>  
-      Courtesy Northwest Room</sub>
+      Courtesy Tacoma Public Library Northwest Room</sub>
       <br> 
     </div>
   </div>
