--- a/pages/defiance.html
+++ b/pages/defiance.html
@@ -75,7 +75,7 @@ permalink: /defiance.html
     <br> 
     Richards Studio <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/26249/rec/1">(D7207-6)</a>, 04-24-1938 
     <br>
-    Courtesy Northwest Room</sub>
+    Courtesy Tacoma Public Library Northwest Room</sub>
     </div>
     <div class="column left" style="background-color:#FFFFFF;">
       <p>Technical Drawings: 
@@ -136,7 +136,7 @@ permalink: /defiance.html
     <br>  
     Richards Studio <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/24136/rec/1">(D34612-73)</a>, c.a. 1934
     <br>
-    Courtesy Northwest Room</sub>
+    Courtesy Tacoma Public Library Northwest Room</sub>
     </div>
   </div>
 </div>
