--- a/pages/dugan.html
+++ b/pages/dugan.html
@@ -106,7 +106,7 @@ permalink: /dugan.html
     <br>
     TPL Historic Building Files (BU-12730), c.a. 1934
     <br>
-    Courtesy Northwest Room</sub>
+    Courtesy Tacoma Public Library Northwest Room</sub>
   </div>
 </div>
   
@@ -127,7 +127,7 @@ permalink: /dugan.html
     <br>
     Richards Studio <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/24136/rec/1">(D34612-73)</a>, 04-24-1938 
     <br>
-    Courtesy Northwest Room</sub>
+    Courtesy Tacoma Public Library Northwest Room</sub>
   </div>
 </div>
 
@@ -148,7 +148,7 @@ permalink: /dugan.html
     <br>
     TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/16593/rec/1">(BU-10989)</a>
     <br>
-    Courtesy Northwest Room</sub>
+    Courtesy Tacoma Public Library Northwest Room</sub>
   </div>
 </div>
   
