--- a/pages/edison.html
+++ b/pages/edison.html
@@ -77,7 +77,7 @@ permalink: /edison.html
       <br>
       Photo by Richards Studio <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/23796/rec/1">(D48345-1)</a> 
       <br>  
-      Courtesy Northwest Room</sub>
+      Courtesy Tacoma Public Library Northwest Room</sub>
     </div>
     <div class="column left" style="background-color:#FFFFFF;max-height:750px;">
       <a href="https://aweymo.github.io/losttacoma/item.html?id=lt050"><img src="https://aweymo.github.io/losttacoma/objects/b_barlow.jpeg" alt="Orin Watts Barlow" style="max-width:100%;"></a>
