--- a/pages/hardware.html
+++ b/pages/hardware.html
@@ -78,7 +78,7 @@ permalink: /hardware.html
       <br>
       TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/16849/rec/1">(BU-10989)</a>
       <br>
-      Courtesy Northwest Room</sub>
+      Courtesy Tacoma Public Library Northwest Room</sub>
     </div>
   </div>
   
