--- a/pages/hawthorne.html
+++ b/pages/hawthorne.html
@@ -77,7 +77,7 @@ permalink: /hawthorne.html
       <br>  
     TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/36092/rec/8">(BU-10009)</a>
     <br>  
-    Courtesy Northwest Room</sub>
+    Courtesy Tacoma Public Library Northwest Room</sub>
     </div>
   </div>
   
