--- a/pages/heath.html
+++ b/pages/heath.html
@@ -101,7 +101,7 @@ permalink: /heath.html
       <br>  
     TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/36092/rec/8">(BU-10009)</a>
     <br>  
-    Courtesy Northwest Room</sub>
+    Courtesy Tacoma Public Library Northwest Room</sub>
     <br>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
@@ -111,7 +111,7 @@ permalink: /heath.html
     <br>
     Photo by Richards Studio <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/23796/rec/1">(D48345-1)</a> 
     <br>  
-    Courtesy Northwest Room</sub>
+    Courtesy Tacoma Public Library Northwest Room</sub>
   </div>
 </div>
   
