--- a/pages/lance.html
+++ b/pages/lance.html
@@ -84,7 +84,7 @@ permalink: /lance.html
     <br>  
     Richards Studio <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/32046/rec/1">(LANCE-001)</a>, c.a. 1926
     <br>  
-    Courtesy Northwest Room</sub>
+    Courtesy Tacoma Public Library Northwest Room</sub>
   </div>
 </div>
       
@@ -101,7 +101,7 @@ permalink: /lance.html
     <br>   
     Historic Property Inventory Forms <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/18636/rec/1">(BU-3659)</a>, 06-30-1993
     <br>  
-    Courtesy Northwest Room</sub>
+    Courtesy Tacoma Public Library Northwest Room</sub>
   </div>
 </div>
   
