--- a/pages/lawrence.html
+++ b/pages/lawrence.html
@@ -79,7 +79,7 @@ permalink: /lawrence.html
     <br>
     TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/7619/rec/1">(BU-12730)</a>, c.a. 1934
     <br>
-    Courtesy Northwest Room</sub>
+    Courtesy Tacoma Public Library Northwest Room</sub>
     </div>
   </div>
   
