--- a/pages/mallis.html
+++ b/pages/mallis.html
@@ -81,7 +81,7 @@ permalink: /mallis.html
     <br> 
     Richards Studio <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/22375/rec/1">(D85513-2)</a>, 10-01-1954
     <br>  
-    Courtesy Northwest Room</sub>
+    Courtesy Tacoma Public Library Northwest Room</sub>
   </div>
 </div>
   
