--- a/pages/npba.html
+++ b/pages/npba.html
@@ -79,7 +79,7 @@ permalink: /npba.html
       <br>  
       TPL Historic Building Files (BU-10396) 
       <br>  
-      Courtesy Northwest Room</sub>
+      Courtesy Tacoma Public Library Northwest Room</sub>
     </div>
     </div>
   </div>
