--- a/pages/roosevelt.html
+++ b/pages/roosevelt.html
@@ -79,7 +79,7 @@ permalink: /roosevelt.html
       <br>  
       Marvin D. Boland Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/2619/rec/4">(BOLAND-B17893)</a>, 12-01-1928
       <br>  
-     Courtesy Northwest Room</sub>
+      Courtesy Tacoma Public Library Northwest Room</sub>
     </div>
     </div>
   
