--- a/pages/rowlands.html
+++ b/pages/rowlands.html
@@ -71,7 +71,7 @@ permalink: /rowlands.html
     <br>
     TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/823/rec/1">(BU-14839)</a>, c.a. 1981
     <br>  
-    Courtesy Northwest Room</sub>
+    Courtesy Tacoma Public Library Northwest Room</sub>
   </div>
   </div>
 </div>
