--- a/pages/sperry.html
+++ b/pages/sperry.html
@@ -80,7 +80,7 @@ permalink: /sperry.html
      <br>
      TPL Historic Building Files <a href="https://aweymo.github.io/losttacoma/browse.html#3%20SCHUSTER%20PARKWAY%2C%20TACOMA">(BU-13919)</a>, c.a 1920
      <br>
-     Courtesy Northwest Room</sub>
+     Courtesy Tacoma Public Library Northwest Room</sub>
      <br>
     </div>
     </div>
