--- a/pages/sutton.html
+++ b/pages/sutton.html
@@ -107,7 +107,7 @@ permalink: /sutton.html
     <br>  
     TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/16593/rec/1">(BU-10989)</a>, 1938-04-24
     <br>
-    Courtesy Northwest Room</sub>
+    Courtesy Tacoma Public Library Northwest Room</sub>
   </div>
 </div>
   
@@ -119,7 +119,7 @@ permalink: /sutton.html
     <br>  
     TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/7619/rec/1">(BU-12730)</a>, c.a. 1934
     <br>
-    Courtesy Northwest Room</sub>
+    Courtesy Tacoma Public Library Northwest Room</sub>
     </div>
     <div class="column right" style="background-color:#FFFFFF;max-height:700px;">
       <a href="https://aweymo.github.io/losttacoma/browse.html#934-36%20BROADWAY%2C%20TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_waist" alt="New York Waist House" style="max-width:100%;"></a>
@@ -128,7 +128,7 @@ permalink: /sutton.html
       <br>  
       TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/4087/rec/1">(BU-12524)</a>, 05-04-1927
       <br>
-      Courtesy Northwest Room</sub>
+      Courtesy Tacoma Public Library Northwest Room</sub>
     </div>
   </div>
 
