--- a/pages/waist.html
+++ b/pages/waist.html
@@ -96,7 +96,7 @@ permalink: /waist.html
     <br>  
     TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/4087/rec/1">(BU-12524)</a>, 05-04-1927
     <br>
-    Courtesy Northwest Room</sub>
+    Courtesy Tacoma Public Library Northwest Room</sub>
     </div>
     </div>
   
