--- a/pages/garage.html
+++ b/pages/garage.html
@@ -77,7 +77,7 @@ permalink: /garage.html
     <br> 
     TPL Historic Building Files (BU-12819), 10-02-1930
     <br>
-    Courtesy Northwest Room</sub>
+    Courtesy Tacoma Public Library Northwest Room</sub>
     </div>
   </div>
   
