--- a/pages/griffin.html
+++ b/pages/griffin.html
@@ -92,7 +92,7 @@ permalink: /griffin.html
     <br>   
     Marvin D. Boland Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/2619/rec/4">(BOLAND-B17893)</a>, 1928-01-12 
     <br> 
-    Courtesy Northwest Room</sub>
+    Courtesy Tacoma Public Library Northwest Room</sub>
     <br>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
@@ -102,7 +102,7 @@ permalink: /griffin.html
       <br>   
     TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/7337/rec/1">(BU-11303)</a>, 12-11-1926
     <br>  
-    Courtesy Northwest Room</sub>
+    Courtesy Tacoma Public Library Northwest Room</sub>
     <br>
   </div>
 </div>
