--- a/pages/hill.html
+++ b/pages/hill.html
@@ -96,7 +96,7 @@ permalink: /hill.html
     <br>   
     Marvin D. Boland Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/2619/rec/4">(BOLAND-B17893)</a>, 12-01-1928
     <br>  
-    Courtesy Northwest Room</sub>
+    Courtesy Tacoma Public Library Northwest Room</sub>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005"><img src="https://aweymo.github.io/losttacoma/objects/ ext_arlington" alt="Arlington Elementary School Addition" style="max-width:100%;"></a>
@@ -105,7 +105,7 @@ permalink: /hill.html
     <br>   
     TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/7337/rec/1">(BU-11303)</a>, 12-11-1926
     <br>  
-    Courtesy Northwest Room</sub>
+    Courtesy Tacoma Public Library Northwest Room</sub>
   </div>
 </div>
 
@@ -117,7 +117,7 @@ permalink: /hill.html
       <br>   
       Richards Studio <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/18739/rec/1">(D141770-15)</a>, 05-28-1964
       <br>  
-      Courtesy Northwest Room</sub>
+      Courtesy Tacoma Public Library Northwest Room</sub>
     </div>
     <div class="column right" style="background-color:#FFFFFF;">
       <a href="https://aweymo.github.io/losttacoma/browse.html#901 S 4TH ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_talmud_02" alt="Talmud Torah Synagogue" style="max-width:100%;"></a>
@@ -126,7 +126,7 @@ permalink: /hill.html
       <br>   
       Marvin D. Boland Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/29138/rec/1">(BOLAND-B18322)</a>, 04-08-1928
       <br> 
-      Courtesy Northwest Room</sub>
+      Courtesy Tacoma Public Library Northwest Room</sub>
     </div>
   </div>
   
