--- a/pages/russell.html
+++ b/pages/russell.html
@@ -101,7 +101,7 @@ permalink: /russell.html
     <br>  
     Historic Property Inventory Forms (BU-3659), 06-30-1993
     <br>  
-    Courtesy Northwest Room</sub>
+    Courtesy Tacoma Public Library Northwest Room</sub>
   </div>
 </div>
 
@@ -113,7 +113,7 @@ permalink: /russell.html
         <br>  
         TPL Historic Building Files (BU-11000), 11-04-1928
         <br>
-        Courtesy Northwest Room</sub>
+        Courtesy Tacoma Public Library Northwest Room</sub>
     </div>
     <div class="column right" style="background-color:#FFFFFF;">
       <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pavilion_02" alt="Point Defiance Pavilion" style="max-width:100%;"></a>
@@ -122,7 +122,7 @@ permalink: /russell.html
       <br>  
       Richards Studio (D34612-73), ca. 1934
       <br>
-      Courtesy Northwest Room</sub>
+      Courtesy Tacoma Public Library Northwest Room</sub>
     </div>
   </div>
   
