--- a/pages/talmud.html
+++ b/pages/talmud.html
@@ -75,7 +75,7 @@ permalink: /talmud.html
       <br>   
       Richards Studio <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/18739/rec/1">(D141770-15)</a>, 05-28-1964
       <br>  
-      Courtesy Northwest Room</sub>
+      Courtesy Tacoma Public Library Northwest Room</sub>
     </div>
     <div class="column left" style="background-color:#FFFFFF;">
       <a href="https://aweymo.github.io/losttacoma/browse.html#901 S 4TH ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_talmud_02" alt="Talmud Torah Synagogue" style="max-width:100%;"></a>
@@ -84,7 +84,7 @@ permalink: /talmud.html
       <br>   
       Marvin D. Boland Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/29138/rec/1">(BOLAND-B18322)</a>, 04-08-1928
       <br> 
-      Courtesy Northwest Room</sub>
+      Courtesy Tacoma Public Library Northwest Room</sub>
       </div>
     <div class="column right" style="background-color:#FFFFFF;">
       <p>Technical Drawings: 
