--- a/pages/dugan.html
+++ b/pages/dugan.html
@@ -104,7 +104,7 @@ permalink: /dugan.html
     <br>
     <sub>Lawrence Block Remodel
     <br>
-    TPL Historic Building Files (BU-12730), c.a. 1934
+    TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/7619/rec/1">(BU-12730)</a>, c.a. 1934
     <br>
     Courtesy Tacoma Public Library Northwest Room</sub>
   </div>
@@ -137,7 +137,7 @@ permalink: /dugan.html
     <br>
     <sub>Donnelly Hotel Site
     <br>
-    TPL Historic Building Files (BU-11892), 1938-04-24
+    TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/16593/rec/1">(BU-10989)</a>, 1938-04-24
     <br>
     Courtesy Northwest Room</sub>
   </div>
