--- a/pages/garage.html
+++ b/pages/garage.html
@@ -75,7 +75,7 @@ permalink: /garage.html
     <br>
     <sub>Garage for Jail and Public Safety Building
     <br> 
-    TPL Historic Building Files (BU-12819), 10-02-1930
+    TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/16434/rec/1">(BU-12819)</a>, 10-02-1930
     <br>
     Courtesy Tacoma Public Library Northwest Room</sub>
     </div>
