--- a/pages/sperry.html
+++ b/pages/sperry.html
@@ -54,7 +54,7 @@ permalink: /sperry.html
 
   <div class="row">
     <div class="column left" style="background-color:#FFFFFF;">
-      <h4><p><b>Scandinavian American Bank Hotel</b></p></h4>
+      <h4><p><b>Sperry Flour Company Elevator</b></p></h4>
       <br>
       <strong>Status: Demolished</strong>
       <br>
