--- a/pages/npba.html
+++ b/pages/npba.html
@@ -77,7 +77,7 @@ permalink: /npba.html
       <br>
       <sub>N.P.B.A. Hospital
       <br>  
-      TPL Historic Building Files (BU-10396) 
+      TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/23481/rec/1">(BU-10396) </a>
       <br>  
       Courtesy Tacoma Public Library Northwest Room</sub>
     </div>
