--- a/pages/cornils.html
+++ b/pages/cornils.html
@@ -65,7 +65,7 @@ permalink: /cornils.html
     <br>
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt027">Carstens Packing Company Coolers and Shipping Office</a> </p>
     <br>
-    <p>According to passages in Electrical West and American Machinist magazines, published in 1922, P.V. Cornils acted as the Carstens Packing Company in-house architect, designing various additions around the original structure. </p>
+    <p>According to passages in <i>Electrical West</i> and <i>American Machinist</i> magazines, published in 1922, P.V. Cornils acted as the Carstens Packing Company in-house architect, designing various additions around the original structure. </p>
     <br>
     <sub>Sources: "American Machinist. McGraw-Hill, 1922.", "Electrical West. McGraw-Hill Company of California, 1922.”</sub>
     <br>
