--- a/pages/flickinger.html
+++ b/pages/flickinger.html
@@ -12,7 +12,7 @@ permalink: /flickinger.html
     img {
   width: 600px;
   height: 600px;
-  object-fit: cover;
+  object-fit: contain;
 }
 * {
   box-sizing: border-box;
