--- a/pages/hec.html
+++ b/pages/hec.html
@@ -62,7 +62,7 @@ permalink: /hec.html
     <br>
     <p><strong>Other Work:</strong> <a href="https://www.loc.gov/resource/hhh.ia0405.photos?st=gallery">Ruth Packing Company</a> </p>
     <br>
-    <sub>"Library of Congress, Washington, D.C. 20540 USA." “Rath Packing Company, Sycamore Street between Elm & Eighteenth Streets, Waterloo, Black Hawk County, IA.”, “Seattle Daily Times (Published as THE SEATTLE DAILY TIMES) - September 30, 1943 - Page 33,”, “The Argus - October 13, 1978”, “The Times Argus- November 2, 1980”</sub>
+    <sub>Sources: "Library of Congress, Washington, D.C. 20540 USA." “Rath Packing Company, Sycamore Street between Elm & Eighteenth Streets, Waterloo, Black Hawk County, IA.”, “Seattle Daily Times (Published as THE SEATTLE DAILY TIMES) - September 30, 1943 - Page 33,”, “The Argus - October 13, 1978”, “The Times Argus- November 2, 1980”</sub>
     <br>
 </div>
 <div class="column right" style="background-color:#FFFFFF;">
