--- a/pages/abattoir.html
+++ b/pages/abattoir.html
@@ -29,7 +29,7 @@ permalink: /abattoir.html
 }
   
 .column {
-  float: right;
+  float: right
   padding: 10px;
   height: 800px; 
   }
@@ -65,7 +65,7 @@ permalink: /abattoir.html
       <p>Series of 21 technical drawings for the Carstens Packing Company created by the <a href="https://aweymo.github.io/losttacoma/hec.html">Henschien, Everds & Crombie Architects & Engineers</a> firm on June 10, 1939. 
       The company was based in Chicago, Illinois at 59 East Van Buren St. and specialized in meat processing plants. </p>
       <br>
-      <p>The Carstens Packing Company had been active since 1897. In 1954, the company was sold to an Eastern firm and renamed to the Hi-Grade Packing Co. 
+      <p>The Carstens Packing Company had been active since 1904. In 1954, the company was sold to an Eastern firm and renamed to the Hi-Grade Packing Co. 
       In 1990, executives in Seattle closed the Tacoma processing plant and on October 24, 1996 the structure was destroyed by fire. 
       <br>
       <br>
