Revert "link updates"
This reverts commit c4312e9fc07a68dfe17936e5ba039babe06a385b.

--- a/pages/abattoir.html
+++ b/pages/abattoir.html
@@ -69,7 +69,7 @@ permalink: /abattoir.html
       In 1990, executives in Seattle closed the Tacoma processing plant and on October 24, 1996 the structure was destroyed by fire. 
       <br>
       <br>
-      The location is now the site of the Tacoma Immigration and Customs Enforcement detention center. For more on the relationship between these two buildings which occupied this site, please visit <a href="https://andrewweymouth.bandcamp.com/album/the-tideflats">The Tideflats</a>.</p>
+      The location is now the site of the Tacoma Immigration and Customs Enforcement detention center. For more on the relationship between these two buildings which occupied this site, please visit <a href="https://aweymouth.squarespace.com/tideflats">The Tideflats</a>.</p>
       <br>
       <p>Other records related to this location:
       <br>
